--- a/VaskEnTid/VaskEnTidLib/VaskEnTidLib.csproj
+++ b/VaskEnTid/VaskEnTidLib/VaskEnTidLib.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Service\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.1" />
+  </ItemGroup>
+
 </Project>
