--- a/VaskEnTid/VaskEnTidWeb/VaskEnTidWeb.csproj
+++ b/VaskEnTid/VaskEnTidWeb/VaskEnTidWeb.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\Images\LogoVaskEnTid.jpg" />
+    <None Include="wwwroot\Images\LogoVaskEnTid.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.1" />
   </ItemGroup>
 
